@@ -18,6 +18,7 @@
         "Asteroid_Mining >= 0.9.15",
         "better-victory-screen >= 0.3.1",
         "capacity-combinator >= 2.4.0",
+        "cargo-ships >= 0.2.7",
         "CleanedConcrete >= 1.0.4",
         "electricboiler >= 1.1.0",
         "extra-storage-tank-minibuffer >= 0.1.4",
